--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "climbox-project",
+  "name": "noabox-project",
   "version": "1.0",
-  "description": "Climbox Dashboard IOT",
+  "description": "Noabox Dashboard IOT",
   "main": "/public/index.html",
   "scripts": {
     "open-app": "gulp open-app",
